# libstrsafe

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  TESTING  config.h.in  configure  configure.ac  doxygen.conf  strsafe.c  strsafe.h
doc/: .gitignore  Makefile  abstract.tex  buffer-overflows.tex  legacy-code.tex  libstrsafe.tex  using-strsafe.tex
m4/: .gitignore
src/: Makefile.am  Makefile.in  strsafe.c  strsafe.h  strsafe_cat.c  strsafe_cat_generic.h  strsafe_catn.c  strsafe_catn_generic.h  strsafe_copy.c  strsafe_copy_generic.h  strsafe_copyn.c  strsafe_gets.c  strsafe_gets_generic.h  strsafe_length.c  strsafe_length_generic.h  strsafe_printf.c  strsafe_vprintf.c  strsafe_vprintf_generic.h
tests/: Gets-t.sh  Makefile.am  Makefile.in  StringCbCatA-t.c  StringCbCatExA-t.c  StringCbCatExW-t.c  StringCbCatNA-t.c  StringCbCatNExA-t.c  StringCbCatNExW-t.c  StringCbCatNW-t.c  StringCbCatW-t.c  StringCbCopyA-t.c  StringCbCopyExA-t.c  StringCbCopyExW-t.c  StringCbCopyNA-t.c  StringCbCopyNExA-t.c  StringCbCopyNExW-t.c  StringCbCopyNW-t.c  StringCbCopyW-t.c  StringCbGetsA-t  StringCbGetsExW-t.c  StringCbGetsW-sh-t  StringCbGetsW-t  StringCbLengthA-t.c  StringCbLengthW-t.c  StringCbPrintfA-t.c  StringCbPrintfExA-t.c  StringCbPrintfExW-t.c  StringCbPrintfW-t.c  StringCchCatA-t.c  StringCchCatExA-t.c  StringCchCatExW-t.c  StringCchCatNA-t.c  StringCchCatNExA-t.c  StringCchCatNExW-t.c  StringCchCatNW-t.c  StringCchCatW-t.c  StringCchCopyA-t.c  StringCchCopyExA-t.c  StringCchCopyExW-t.c  (+18 more)
tests/data/: exact_fit_10.ans  multiple_lines.in  multiple_lines_10.in  no_newline_10.ans  single_word_3.ans
tests/gets_data/: single_word_unicode.in
tests/tap/: basic.c  basic.h  wide.c  wide.h
