lib_LTLIBRARIES = libstrsafe.la
libstrsafe_la_SOURCES = strsafe.h strsafe_cat.c strsafe_catn.c \
			strsafe_copy.c strsafe_copyn.c strsafe_gets.c \
			strsafe_length.c strsafe_printf.c strsafe_vprintf.c 
AM_CFLAGS = -pedantic -Werror -Wall -Wextra -Wconversion -Wshadow \
	    -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings \
	    -Waggregate-return -Wstrict-prototypes -g

